// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<button
  className="button"
>
  Kuehne Nagel
</button>
`;

exports[`matches snapshot correctly when there are no props 1`] = `
<button
  className="button"
/>
`;
